Fixes bug 72312 "gopher needs to wrap the proxy channel" patch=bbaetz, r=dougt, sr=darin