netwerk/protocol/gopher/src/nsGopherChannel.h
@@ -33,15 +33,19 @@
 #include "nsIURI.h"
 #include "nsIURL.h"
 #include "nsGopherHandler.h"
+
+#include "nsIProxy.h"
 #include "nsIStreamListener.h"
 #include "nsITransport.h"
 
 class nsGopherChannel : public nsIChannel,
+                        public nsIProxy,
                         public nsIStreamListener {
 public:
     NS_DECL_ISUPPORTS
     NS_DECL_NSIREQUEST
     NS_DECL_NSICHANNEL
+    NS_DECL_NSIPROXY
     NS_DECL_NSISTREAMLISTENER
     NS_DECL_NSISTREAMOBSERVER
 
@@ -55,6 +59,8 @@ public:
     
     nsresult Init(nsIURI* uri);
 
+    nsresult SetProxyChannel(nsIChannel* aChannel);
+    nsresult GetUsingProxy(PRBool *aUsingProxy);
 protected:
     nsCOMPtr<nsIURI>                    mOriginalURI;
     nsCOMPtr<nsIInterfaceRequestor>     mCallbacks;
@@ -81,7 +87,12 @@ protected:
     nsCOMPtr<nsIRequest>                mTransportRequest;
     nsresult                            mStatus;
 
-protected:
+    nsCOMPtr<nsIChannel>                mProxyChannel; // a proxy channel
+    nsCString                           mProxyHost;
+    PRInt32                             mProxyPort;
+    nsCString                           mProxyType;
+    PRBool                              mProxyTransparent;
+
     nsresult SendRequest(nsITransport* aTransport);
 };
 
